# flexpay

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/routes/: auth.py  health.py  wallet.py
backend/app/services/: otp_service.py  wallet_service.py
backend/tests/: conftest.py  test_auth_and_wallet.py
dashboard/: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  tsconfig.json
docs/: 01_platform_requirements_analysis.md  02_support_agent_handbook.md  03_launch_readiness_and_next_steps.md  04_api_spec.md  05_threat_model.md  06_pitch_deck.md  FINANCIAL_MODEL.md  FUNDING_ARCHITECTURE.md  SEED_DECK.md  STRATEGY.md  openapi.yaml
mobile/: .gitignore  App.tsx  README.md  SETUP.md  analysis_options.yaml  app.json  babel.config.js  detox.config.js  eas.json  jest.config.js  package-lock.json  package.json  pubspec.yaml  tsconfig.json
prisma/: schema.prisma
src/: app.ts  routes.ts  server.ts
tests/: anti-tipping-off.test.ts  availability.test.ts  bill-payment.test.ts  biller-webhook.test.ts  cashback.test.ts  cohort-failsafe.test.ts  compliance.test.ts  flexxpay-webhook.test.ts  kms-key-provider.test.ts  liquidity-gate.test.ts  nymcard-authorize.test.ts  ops-intel.test.ts  payroll-routing.invariants.test.ts  pii-backfill.test.ts  pii-crypto.test.ts  (+9 more)
(+350 files in other folders)
